# dask_climate

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini
dask_cluster/: scheduler.py  workers.py
data/: generate_sample_data.py
src/: config.py  logger.py  main.py
src/analysis/: __init__.py  compute_trends.py  detect_anomalies.py  ml_anomaly_detection.py  visualize_results.py
tests/: test_compute_trends.py  test_detect_anomalies.py  test_ml_anomaly_detection.py
