[project]
name = "dask-climate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[complete]>=2025.2.0",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "xarray>=2025.1.2",
]
